--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 				<ul class="container">
 					<li><a href="#top">Top</a></li>
 					<li><a href="#overview">Overview</a></li>
+					<li><a href="#problem">Problem</a></li>
 					<li><a href="#data">Data</a></li>
 					<li><a href="#methods">Methods</a></li>
 					<li><a href="#results">Results</a></li>
@@ -39,9 +40,9 @@
 							<p>And this is our project, <strong>Project Title</strong>, <em>a short explanation of the project objectives</em>. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 							<p>Data Science Team</p>
 							<ul style="list-style-type:none; margin-top:-30px;">
-							  <li>Student's name, section</li>
-							  <li>Student's name, section</li>
-							  <li>Student's name, section</li>
+							  <li>Gianna Laya Dela Pena, WFX</li>
+							  <li>Julia Ysobel Pineda, WFU</li>
+							  <li>Frances Lei Ramirez, WFU</li>
 							</ul>
 						</div>
 					</div>
@@ -81,6 +82,61 @@
 					<footer>
 						<p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
 						<a href="#portfolio" class="button large scrolly">Let's take a look at our data</a>
+					</footer>
+				</div>
+			</article>
+
+		<!-- Problem -->
+			<article id="problem" class="wrapper style2">
+				<div class="container">
+					<header>
+						<h2>Problem Formulation</h2>
+						<p>Odio turpis amet sed consequat eget posuere consequat.</p>
+					</header>
+					<div class="row aln-center">
+						<div class="col-4 col-6-medium col-12-small">
+							<section class="box style1">
+								<span class="icon featured fa-comments"></span>
+								<h3>Research Question</h3>
+								<p>Which of the following events correlated the most with the spread of mis/disinformation about the red-tagging of Lumads?</p>
+									<ul>
+										<li>2017 Martial Law in Mindanao</li>
+										<li>Mining of ancestral lands</li>
+										<li>Establishment of the NTF-ELCAC</li> 
+									</ul>
+							</section>
+						</div>
+						<div class="col-4 col-6-medium col-12-small">
+							<section class="box style1">
+								<span class="icon solid featured fa-camera-retro"></span>
+								<h3>Hypotheses</h3>
+								<ol>
+									<li>The timing of the 2017 Martial Law in Mindanao correlates the most with the spread of mis/disinformation about the red-tagging of Lumads.</li>
+									<li>The timing of the mining of ancestral lands correlates the most with the spread of mis/disinformation about the red-tagging of Lumads.</li>
+									<li>The timing of the establishment of the NTF-ELCAC correlates the most with the spread of mis/disinformation about the red-tagging of Lumads.</li>
+								</ol>
+							</section>
+						</div>
+						<div class="col-4 col-6-medium col-12-small">
+							<section class="box style1">
+								<span class="icon featured fa-thumbs-up"></span>
+								<h3>Null Hypothesis</h3>
+								<p>None of the events correlated with the spread of mis/disinformation about the red-tagging of Lumads.</p>
+							</section>
+						</div>
+						<div class="col-8 col-9-medium col-15-small">
+							<section class="box style1">
+								<span class="icon featured fa-thumbs-up"></span>
+								<h3>Action Plan</h3>
+								<ul>
+									<li>Analyze the frequency and posting time of mis/disinformation tweets about the red-tagging of Lumads starting from the year 2016 or earlier. </li>
+									<li>Compare the total mentions and interactions of tweets about the red-tagging of Lumads triggered by the different events stated.</li>
+								</ul>
+							</section>
+						</div>
+					</div>
+					<footer>
+						<p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
 					</footer>
 				</div>
 			</article>
