Edited problem formulation

--- a/index.html
+++ b/index.html
@@ -94,43 +94,40 @@
 						<p>Odio turpis amet sed consequat eget posuere consequat.</p>
 					</header>
 					<div class="row aln-center">
-						<div class="col-4 col-6-medium col-12-small">
+						<div class="col-12 col-12-medium col-6-small">
 							<section class="box style1">
-								<span class="icon featured fa-comments"></span>
+					
 								<h3>Research Question</h3>
 								<p>Which of the following events correlated the most with the spread of mis/disinformation about the red-tagging of Lumads?</p>
 									<ul>
-										<li>2017 Martial Law in Mindanao</li>
-										<li>Mining of ancestral lands</li>
-										<li>Establishment of the NTF-ELCAC</li> 
+										<div style="margin: 0em 0em 1em 0em">2017 Martial Law in Mindanao</div>
+										<div style="margin: 0em 0em 1em 0em">Mining of ancestral lands</div>
+										<div>Establishment of the NTF-ELCAC</div> 
 									</ul>
 							</section>
 						</div>
-						<div class="col-4 col-6-medium col-12-small">
+						<div class="col-8 col-12-medium col-6-small">
 							<section class="box style1">
-								<span class="icon solid featured fa-camera-retro"></span>
 								<h3>Hypotheses</h3>
 								<ol>
-									<li>The timing of the 2017 Martial Law in Mindanao correlates the most with the spread of mis/disinformation about the red-tagging of Lumads.</li>
-									<li>The timing of the mining of ancestral lands correlates the most with the spread of mis/disinformation about the red-tagging of Lumads.</li>
-									<li>The timing of the establishment of the NTF-ELCAC correlates the most with the spread of mis/disinformation about the red-tagging of Lumads.</li>
+									<li style="margin: 0em 2em 1em 2em">The timing of the 2017 Martial Law in Mindanao correlates the most with the spread of mis/disinformation about the red-tagging of Lumads.</li>
+									<li style="margin: 0em 2em 1em 2em">The timing of the mining of ancestral lands correlates the most with the spread of mis/disinformation about the red-tagging of Lumads.</li>
+									<li style="margin: 0em 2em 0em 2em">The timing of the establishment of the NTF-ELCAC correlates the most with the spread of mis/disinformation about the red-tagging of Lumads.</li>
 								</ol>
 							</section>
 						</div>
-						<div class="col-4 col-6-medium col-12-small">
-							<section class="box style1">
-								<span class="icon featured fa-thumbs-up"></span>
+						<div class="col-4 col-12-medium col-6-small">
+							<section class="box" style="padding: 3em 2em 7.75em 2em">
 								<h3>Null Hypothesis</h3>
-								<p>None of the events correlated with the spread of mis/disinformation about the red-tagging of Lumads.</p>
+								<p style="margin-top: 4em">None of the events correlated with the spread of mis/disinformation about the red-tagging of Lumads.</p>
 							</section>
 						</div>
-						<div class="col-8 col-9-medium col-15-small">
-							<section class="box style1">
-								<span class="icon featured fa-thumbs-up"></span>
-								<h3>Action Plan</h3>
+						<div class="col-12 col-12-medium col-6-small">
+							<section class="box style2">
+								<h3 style="margin-bottom: 0.5em">Action Plan</h3>
 								<ul>
-									<li>Analyze the frequency and posting time of mis/disinformation tweets about the red-tagging of Lumads starting from the year 2016 or earlier. </li>
-									<li>Compare the total mentions and interactions of tweets about the red-tagging of Lumads triggered by the different events stated.</li>
+									<p>Analyze the frequency and posting time of mis/disinformation tweets about the red-tagging of Lumads starting from the year 2016 or earlier. </p>
+									<p>Compare the total mentions and interactions of tweets about the red-tagging of Lumads triggered by the different events stated.</p>
 								</ul>
 							</section>
 						</div>
