Added data exploration page

--- a/index.html
+++ b/index.html
@@ -96,7 +96,6 @@
 					<div class="row aln-center">
 						<div class="col-12 col-12-medium col-6-small">
 							<section class="box style1">
-					
 								<h3>Research Question</h3>
 								<p>Which of the following events correlated the most with the spread of mis/disinformation about the red-tagging of Lumads?</p>
 									<ul>
@@ -150,21 +149,21 @@
 							<article class="box style2">
 								<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
 								<h3><a href="#">Topic</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<p>Red-tagging of Lumad groups</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
 								<h3><a href="#">Keywords</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<p>lumad, cpp, npa, ndf, communist, salugpongan, afp, terrorist, indoctrinate, communism, rebel, komunista, recruit, brainwash, alcadev, school, bakwit, schools, ip, sos, network, save, our, salugpungan</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
 								<h3><a href="#">Tools</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<p>Manual gathering of data</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
@@ -206,7 +205,7 @@
 						<div class="col-6 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
-								<h3><a href="#">Data Preprocessing</a></h3>
+								<h3><a href="exploration.html">Data Exploration</a></h3>
 								<p>Ornare nulla proin odio consequat.</p>
 							</article>
 						</div>
