Updated data preprocessing part

--- a/exploration.html
+++ b/exploration.html
@@ -45,24 +45,24 @@
             <div class="col-4 col-6-medium col-12-small">
               <section class="box style1">
                 <h3>Handling Missing Values</h3>
-                <p>The columns "Views", "Account Bio", and "Location" were dropped as they have missing values. The columns "Collector", "Rating", "Reasoning", and "Remarks" were also dropped as they are only relevant for the data collection portion of the project.</p>
+                <p>The columns "Views", "Account Bio", and "Location" were dropped as they have missing values. The columns "Collector", "Rating", "Reasoning", and "Remarks" were also dropped as they are only relevant for the data collection portion of the project. All other columns in the dataset have complete values.</p>
               </section>
             </div>
             <div class="col-4 col-6-medium col-12-small">
               <section class="box style1">
                 <h3>Ensuring Formatting Consistency</h3>
-                <p>text</p>
+                <p>The date values in the "Date posted" column were formatted to ensure consistency. The format followed is DD/MM/YY HH:MM.</p>
               </section>
             </div>
             <div class="col-4 col-6-medium col-12-small">
               <section class="box style1">
                 <h3>Categorical Data Encoding</h3>
-                <p>text</p>
+                <p>The values in the "Account type" column are categorical data. These were encoded into numerical values as 0 for Anonymous, 1 for Identified, and 2 for Media. This encoding is saved in a new "Account type category" column.</p>
               </section>
             </div>
           </div>
         </div>
-
+        
         <div class="container">
           <header>
             <h2><strong>Natural Language Processing</strong></h2>
