Updated binning part

--- a/exploration.html
+++ b/exploration.html
@@ -93,7 +93,8 @@
             <div class="col-8 col-12-medium col-6-small">
               <section class="box style1">
                 <h3>Binning</h3>
-                <p>text</p>
+                <p>The tweets collected were grouped into yearly, daily, and 6-hour intervals. Most of the tweets collected were made in 2018, while no tweets were collected from the year 2016. Tweets were usually created on Fridays from the 18:00-23:59 time period.</p>
+                <!-- insert the 3 graphs-->
               </section>
             </div>
           </div>
