Updated scatterplot part

--- a/exploration.html
+++ b/exploration.html
@@ -57,7 +57,7 @@
             <div class="col-4 col-6-medium col-12-small">
               <section class="box style1">
                 <h3>Categorical Data Encoding</h3>
-                <p>The values in the "Account type" column are categorical data. These were encoded into numerical values as 0 for Anonymous, 1 for Identified, and 2 for Media. This encoding is saved in a new "Account type category" column.</p>
+                <p>The values in the "Account type" column are categorical data. These were encoded into numerical values as 0 for Anonymous, 1 for Identified, and 2 for Media. This encoding is added as a new "Account type category" column.</p>
               </section>
             </div>
           </div>
@@ -72,7 +72,7 @@
             <div class="col-8 col-12-medium col-6-small">
               <section class="box style1">
                 <h3>Stop Words Removal</h3>
-                <p>text</p>
+                <p>Punctuation marks were removed from the tweets to better aid in analysis of their content.</p>
               </section>
             </div>
           </div>
@@ -111,7 +111,9 @@
             <div class="col-8 col-12-medium col-6-small">
               <section class="box style1">
                 <h3>Scatterplot</h3>
-                <p>text</p>
+                <p>A scatterplot was used to display the relationship between tweet engagement and tweet content type, as well as tweet engagement and year posted. The engagement value was taken by adding a tweet's likes, replies, retweets, and quote tweets.</p>
+                <p>The first scatterplot shows us that tweets under the Rational type have the highest engagement, while tweets under the Transactional type have the lowest engagement. This implies that users engage more with tweets that are informational or educational.</p>
+                <p>The second scatterplot shows us that tweets made in recent years, specifically 2020 and 2022, have the highest engagement</p>
               </section>
             </div>
             <div class="col-8 col-12-medium col-6-small">
