--- a/exploration.html
+++ b/exploration.html
@@ -94,7 +94,7 @@
               <section class="box style1">
                 <h3>Binning</h3>
                 <p>The tweets collected were grouped into yearly, daily, and 6-hour intervals. Most of the tweets collected were made in 2018, while no tweets were collected from the year 2016. Tweets were usually created on Fridays from the 18:00-23:59 time period.</p>
-                <!-- insert the 3 graphs-->
+                <!-- insert the 3 graphs -->
               </section>
             </div>
           </div>
@@ -114,6 +114,7 @@
                 <p>A scatterplot was used to display the relationship between tweet engagement and tweet content type, as well as tweet engagement and year posted. The engagement value was taken by adding a tweet's likes, replies, retweets, and quote tweets.</p>
                 <p>The first scatterplot shows us that tweets under the Rational type have the highest engagement, while tweets under the Transactional type have the lowest engagement. This implies that users engage more with tweets that are informational or educational.</p>
                 <p>The second scatterplot shows us that tweets made in recent years, specifically 2020 and 2022, have the highest engagement</p>
+                <!-- insert 2 scatterplots -->
               </section>
             </div>
             <div class="col-8 col-12-medium col-6-small">
