Updated structure of data exploration page

--- a/exploration.html
+++ b/exploration.html
@@ -60,11 +60,18 @@
                 <p>The values in the "Account type" column are categorical data. These were encoded into numerical values as 0 for Anonymous, 1 for Identified, and 2 for Media. This encoding is added as a new "Account type category" column.</p>
               </section>
             </div>
+            <div class="col-4 col-6-medium col-12-small">
+              <section class="box style1">
+                <h3>Standardization</h3>
+                <p>text</p>
+              </section>
+            </div>
           </div>
         </div>
         
         <div class="container">
           <header>
+            <br><br><br>
             <h2><strong>Natural Language Processing</strong></h2>
           </header>
           <p>text</p>
@@ -80,6 +87,7 @@
 
         <div class="container">
           <header>
+            <br><br><br>
             <h2><strong>Time Series Analysis</strong></h2>
           </header>
           <p>text</p>
