--- a/exploration.html
+++ b/exploration.html
@@ -65,7 +65,7 @@
             <div class="col-4 col-6-medium col-12-small">
               <section class="box style1">
                 <h3>Standardization</h3>
-                <p>The frequency of tweets per year are scaled around the mean with a unit standard deviation. Here, we consider outliers to be values which exceed 3 standard deviations from the mean. From this definition, the resulting graph shows that there are no outliers among the number of tweets for each year. Most years have tweet frequencies that fall below one standard deviation from the mean, with the exception of the years 2015 and 2018 which exceed 1 and 2 standard deviations, respectively.</p>
+                <p>The frequency of tweets per year were scaled around the mean with a unit standard deviation. Here, we considered outliers to be values which exceed 3 standard deviations from the mean. From this definition, the resulting graph shows that there are no outliers among the number of tweets for each year. Most years have tweet frequencies that fall below one standard deviation from the mean, with the exception of the years 2015 and 2018 which exceed 1 and 2 standard deviations, respectively.</p>
               </section>
             </div>
           </div>
