--- a/exploration.html
+++ b/exploration.html
@@ -133,7 +133,7 @@
                 <h3>Bar Graph</h3>
                 <p>We chose to visualize the frequency of the keywords used to search for the tweets using a bar graph. Other than the words 'lumad'/'ip', and 'npa'/'cpp', which are directly part of our research question, we found that 'school/s', 'alcadev', and 'salugpungan'/'salungpongan' were mentioned frequently.</p>
                 <p>Other prominent words were 'save our schools' (collectively), 'communist' and 'terrorist'.</p>
-                <!-- insert bar graph-->
+                <img src = "BarGraph.png", width = "400">
               </section>
             </div>
             <div class="col-8 col-12-medium col-6-small">
