--- a/exploration.html
+++ b/exploration.html
@@ -76,12 +76,12 @@
             <br><br><br>
             <h2><strong>Natural Language Processing</strong></h2>
           </header>
-          <p>text</p>
+          <p>We employed some NLP techniques to clean and filter the data:</p>
           <div class="row aln-center">
             <div class="col-8 col-12-medium col-6-small">
               <section class="box style1">
-                <h3>Stop Words Removal</h3>
-                <p>Punctuation marks were removed so that the texts could be parsed and the tweet contents could be analyzed better. Then, the words most frequently mentioned were taken.</p>
+                <h3>Stop Words & Punctuation Removal</h3>
+                <p>Punctuation marks were removed so that the texts could be parsed and the tweet contents could be analyzed better. Then, the words most frequently mentioned were taken and plotted .</p>
               </section>
             </div>
           </div>
@@ -98,6 +98,9 @@
               <section class="box style1">
                 <h3>Binning</h3>
                 <p>The tweets collected were grouped into yearly, daily, and 6-hour intervals. Most of the tweets collected were made in 2018, while no tweets were collected from the year 2016. Tweets were usually created on Fridays from the 18:00-23:59 time period.</p>
+                <img src = "BinningYear.png", width = "400">
+                <img src = "BinningDay.png", width = "400">
+                <img src = "BinningTime.png", width = "400">
                 <!-- insert the 3 graphs -->
               </section>
             </div>
