--- a/exploration.html
+++ b/exploration.html
@@ -62,10 +62,10 @@
                 <p>The values in the "Account type" column are categorical data. These were encoded into numerical values as 0 for Anonymous, 1 for Identified, and 2 for Media. This encoding is added as a new "Account type category" column.</p>
               </section>
             </div>
-            <div class="col-12 col-6-medium col-12-small">
+            <div class="col-12 col-12-medium col-12-small">
               <section class="box style1">
                 <h3>Standardization</h3>
-                <p>The frequency of tweets per year were scaled around the mean with a unit standard deviation. Here, we considered outliers to be values which exceed 3 standard deviations from the mean. From this definition, the resulting graph shows that there are no outliers among the number of tweets for each year. Most years have tweet frequencies that fall below one standard deviation from the mean, with the exception of the years 2015 and 2018 which exceed 1 and 2 standard deviations, respectively.</p>
+                <p>The frequency of tweets per year were scaled around the mean with a unit standard deviation. Here, we considered outliers to be values which exceed 3 standard deviations from the mean. From this definition, the resulting graph shows that there are no outliers among the number of tweets for each year. Most years have tweet frequencies that fall below one standard deviation from the mean, with the exception of the years 2015 and 2018 which exceed 1 and 2 standard deviations, respectively.</p> <img src="Standardization.png" alt="Standardization" width="500" height="400"/>
               </section>
             </div>
           </div>
