--- a/exploration.html
+++ b/exploration.html
@@ -76,7 +76,6 @@
             <br><br><br>
             <h2><strong>Natural Language Processing</strong></h2>
           </header>
-          <p>We employed some NLP techniques to clean and filter the data:</p>
           <div class="row aln-center">
             <div class="col-12 col-12-medium col-6-small">
               <section class="box style1">
@@ -92,7 +91,6 @@
             <br><br><br>
             <h2><strong>Time Series Analysis</strong></h2>
           </header>
-          <p>text</p>
           <div class="row aln-center">
             <div class="col-12 col-12-medium col-6-small">
               <section class="box style1">
@@ -114,7 +112,6 @@
           <header>
             <h2><strong>VISUALIZATION</strong></h2>
           </header>
-          <p>text</p>
           <div class="row aln-center">
             <div class="col-12 col-12-medium col-6-small">
               <section class="box style1">
@@ -136,8 +133,7 @@
             <div class="col-12 col-12-medium col-6-small">
               <section class="box style1">
                 <h3>Bar Graph</h3>
-                <p>We chose to visualize the frequency of the keywords used to search for the tweets using a bar graph. Other than the words 'lumad'/'ip', and 'npa'/'cpp', which are directly part of our research question, we found that 'school/s', 'alcadev', and 'salugpungan'/'salungpongan' were mentioned frequently.</p>
-                <p>Other prominent words were 'save our schools' (collectively), 'communist' and 'terrorist'.</p>
+                <p>We chose to visualize the frequency of the keywords used to search for the tweets using a bar graph. Other than the words 'lumad'/'ip', and 'npa'/'cpp', which are directly part of our research question, we found that 'school/s', 'alcadev', and 'salugpungan'/'salungpongan' were mentioned frequently. Other prominent words were 'save our schools' (collectively), 'communist' and 'terrorist'.</p>
                 <img src = "BarGraph.png", width = "500">
               </section>
             </div>
