--- a/exploration.html
+++ b/exploration.html
@@ -26,6 +26,10 @@
 			</nav>
     
     <!-- Overview -->
+      <style>
+        h2 {text-align: center;}
+        p {text-align: center;}
+      </style>
 			<article id="top" class="wrapper style1">
 				<div class="container">
           <header>
@@ -41,9 +45,9 @@
 				<div class="container">
           <header>
             <h2><strong>PREPROCESSING</strong></h2>
+            <p>This phase involves cleaning the data to ensure that they are consistent and complete, as well as preparing the data for modeling and further analysis. The following steps were taken to preprocess the data:</p>
           </header>
-          <p>This phase involves cleaning the data to ensure that they are consistent and complete, as well as preparing the data for modeling and further analysis. The following steps were taken to preprocess the data:</p>
-          <div class="row aln-center">
+            <div class="row aln-center">
             <div class="col-4 col-6-medium col-12-small">
               <section class="box style1">
                 <h3>Handling Missing Values</h3>
@@ -152,8 +156,8 @@
 				<div class="container">
           <header>
             <h2><strong>FEATURE ANALYSIS</strong></h2>
+            <p>Features of the dataset were analyzed to determine which are relevant to the project and can produce additional insights.</p>
           </header>
-          <p>Features of the dataset were analyzed to determine which are relevant to the project and can produce additional insights.</p>
           <div class="row aln-center">
             <div class="col-12 col-12-medium col-6-small">
               <section class="box style1">
