--- a/exploration.html
+++ b/exploration.html
@@ -83,8 +83,8 @@
           <div class="row aln-center">
             <div class="col-12 col-12-medium col-6-small">
               <section class="box style1">
-                <h3>Stop Words & Punctuation Removal</h3>
-                <p>Punctuation marks were removed so that the texts could be parsed and the tweet contents could be analyzed better. Then, the words most frequently mentioned were taken and plotted .</p>
+                <h3>Stop Words Removal</h3>
+                <p>Punctuation marks were removed so that the texts could be parsed and the tweet contents could be analyzed better. Then, stop words were removed to improve the efficiency and accuracy of processing the text data, which would be particularly helpful later as the most frequent words were taken. By removing stop words, we can focus more on content-bearing words that carry valuable insignts or contribute to the overall meaning of the text. </p>
               </section>
             </div>
           </div>
@@ -137,8 +137,8 @@
             <div class="col-12 col-12-medium col-6-small">
               <section class="box style1">
                 <h3>Bar Graph</h3>
-                <p>We chose to visualize the frequency of the keywords used to search for the tweets using a bar graph. Other than the words 'lumad'/'ip', and 'npa'/'cpp', which are directly part of our research question, we found that 'school/s', 'alcadev', and 'salugpungan'/'salungpongan' were mentioned frequently. Other prominent words were 'save our schools' (collectively), 'communist' and 'terrorist'.</p>
-                <img src = "BarGraph.png", width = "500">
+                <p>We chose to visualize the frequency of the keywords used to search for the tweets using a bar graph. Other than the words 'lumad'/'ip', and 'npa'/'cpp', which are directly part of our research question, we found that 'school/s', 'alcadev', and 'communist' were mentioned frequently. Other prominent words were 'save our schools' (collectively), 'salugpungan'/'salungpongan' and 'terrorist'.</p>
+                <img src = "BarGraph1.png", width = "500">
               </section>
             </div>
             <div class="col-12 col-12-medium col-6-small">
