--- a/exploration.html
+++ b/exploration.html
@@ -123,15 +123,15 @@
                 <p>A scatterplot was used to display the relationship between tweet engagement and tweet content type, as well as tweet engagement and year posted. The engagement value is further discussed in the <a href="#features">Feature Generation</a> section.</p>
                 <p>The first scatterplot shows us that tweets under the Rational type have the highest engagement, while tweets under the Transactional type have the lowest engagement. This implies that users engage more with tweets that are informational or educational.</p>
                 <p>The second scatterplot shows us that tweets made in recent years, specifically 2020 and 2022, have the highest engagement</p>
-                <img src="scatterplot1.png" width="500" />
-                <img src="scatterplot2.png" width="400" />
+                <img src="scatterplot1.PNG" width="500" />
+                <img src="scatterplot2.PNG" width="400" />
               </section>
             </div>
             <div class="col-12 col-12-medium col-6-small">
               <section class="box style1">
                 <h3>Heatmap</h3>
                 <p>A heatmap was used to display the correlation between a tweet's likes, replies, retweets, quote tweets, and engagement, and the number of followers of the account that posted the tweet. While there is a positive correlation between the engagement and followers, this is considered to be a weak correlation. This implies that tweets made by accounts with a high number of followers do not necessarily mean that their tweets have high engagement. Moreover, out of the four contributors for engagement, it can be noticed that retweets and likes have the highest correlations. This can mean that users may be more influenced to retweet and/or like a tweet if the author is well-known.</p>
-                <img src="heatmap.png" width="400" />
+                <img src="heatmap.PNG" width="400" />
               </section>
             </div>
             <div class="col-12 col-12-medium col-6-small">
