edited line graph section

--- a/exploration.html
+++ b/exploration.html
@@ -144,7 +144,7 @@
             <div class="col-12 col-12-medium col-6-small">
               <section class="box style1">
                 <h3>Line Graph</h3>
-                <p>The following line graph shows the trend for the frequency of mis/disinformation tweets concerning the redtagging of Lumad from the years 2015 to 2022. From 2015, the number of these tweets steadily increases until it hits its peak in 2018. From then on up to 2022, the frequency of tweets appears to be fluctuating every year.</p> <img src = "LineGraph.png", width = "500">
+                <p>The following line graph shows the trend for the frequency of mis/disinformation tweets concerning the redtagging of Lumad from the years 2015 to 2022. From 2015, the number of tweets steadily increase until its peak in 2018. From then on up to 2022, the frequency of tweets appears to fluctuate every year.</p> <img src = "LineGraph.png", width = "500">
               </section>
             </div>
           </div>
