--- a/index.html
+++ b/index.html
@@ -261,7 +261,8 @@
 					<header>
 						<h2>We'd like to hear from you.</h2>
 					</header>
-					<div class="row">
+					<a href="https://forms.gle/m6P9e2YeCzzsMWab6" class="button large scrolly">Send us a message!</a>
+					<!-- <div class="row">
 						<div class="col-12">
 							<form method="post" action="#">
 								<div class="row">
@@ -297,7 +298,7 @@
 							</ul>
 							<hr />
 						</div>
-					</div>
+					</div> -->
 					<footer>
 						<ul id="copyright">
 							<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
